--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/datetimepicker": "^7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
@@ -27,14 +28,17 @@
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-passcode-auth": "^1.0.0",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-select-dropdown": "^3.3.4",
-    "react-native-web": "^0.19.5",
-    "react-native-view-shot": "3.7.0"
+    "react-native-view-shot": "^3.7.0",
+    "react-native-web": "^0.19.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
