--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "npm": "^9.7.2",
     "react": "18.2.0",
     "react-native": "0.72.0",
+    "react-native-blob-util": "^0.19.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-passcode-auth": "^1.0.0",
+    "react-native-pdf": "^6.7.3",
     "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.3",
