--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-passcode-auth": "^1.0.0",
     "react-native-pdf": "^6.7.3",
     "react-native-pdf-lib": "^1.0.0",
+    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
