--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@shopify/react-native-skia": "^0.1.196",
+    "crypto-js": "^4.2.0",
     "expo": ">=49.0.0-0 <50.0.0",
     "expo-file-system": "~15.4.2",
     "expo-local-authentication": "~13.4.1",
@@ -40,6 +41,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-select-dropdown": "^3.3.4",
+    "react-native-sha256": "^1.4.9",
     "react-native-view-shot": "^3.7.0",
     "react-native-web": "^0.19.5"
   },
