--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-native-community/cameraroll": "^4.1.2",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
